--- a/pipetest/Jenkinsfile
+++ b/pipetest/Jenkinsfile
@@ -1,4 +1,4 @@
-node(){
+node('centos7'){
 	stage('¹¹½¨'){
 		//test
 		echo 'build'
@@ -7,6 +7,7 @@ node(){
 		// test
 		echo 'test'
 		// bat label: '', script: 'robot -P . ../cathytest/homework5/course'
+		sh 'echo case001>>suite.txt'
 	}
 	stage('²¿Êğ'){
 		//test
